--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,5 +1,5 @@
 /*
-	Strongly Typed by HTML5 UP
+	Overflow by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,66 +8,103 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body,input,textarea,select
+	*
 	{
-		line-height: 1.75em;
-		font-size: 11pt;
-		letter-spacing: 0;
+		text-shadow: none !important;
 	}
 
-	body
+	body,input,textarea,select
 	{
+		line-height: 1.5em;
+		font-size: 12pt;
+		letter-spacing: 0;
 	}
 
 	h2, h3, h4, h5, h6
 	{
-		font-size: 1.2em;
-		letter-spacing: 2px;
-		text-align: center;
-		margin: 0 0 1.5em 0;
+		font-size: 1em;
 	}
-
-	h2 br, h3 br, h4 br, h5 br, h6 br
-	{
-		display: none;
-	}
-
-	/* Sections/Article */
 	
-		section,
-		article
-		{
-			clear: both;
-			margin: 2em 0 2em 0 !important;
-		}
+	h2
+	{
+		font-size: 1.25em;
+		letter-spacing: 4px;
+	}
 
-			section > :first-child,
-			article > :first-child
-			{
-				margin-top: 0 !important;
-			}
+	/* List */
 
-			section:first-child,
-			article:first-child
-			{
-				margin-top: 0 !important;
-			}
-
-	/* Image */
-
-		.image
+		ul
 		{
 		}
-			
-			.image.left
+
+			ul.default
 			{
-				width: 40%;
 			}
 			
-			.image.featured
+				ul.default li
+				{
+					padding-left: 0.5em;
+				}		
+
+			ul.icons
 			{
-				margin: 0 0 2em 0;
+			}	
+			
+				ul.icons li
+				{
+				}
+				
+					ul.icons a
+					{
+						width: 2em;
+						height: 2em;
+						line-height: 2em;
+					}
+
+			ul.menu
+			{
 			}
+			
+				ul.menu li
+				{
+					display: block;
+					padding: 0;
+					border: 0;
+					margin: 1em 0 0 0;
+				}
+				
+				ul.menu li:first-child
+				{
+					margin-top: 0;
+				}
+
+			ul.actions
+			{
+			}
+			
+				ul.actions li
+				{
+					display: block;
+					margin: 1em 0 0 0;
+				}
+				
+				ul.actions li:first-child
+				{
+					margin-top: 0;
+				}
+
+		ol
+		{
+		}
+
+			ol.default
+			{
+			}
+
+				ol.default li
+				{
+					padding-left: 0.25em;
+				}
 
 	/* Button */
 		
@@ -76,177 +113,89 @@
 		input[type="reset"],
 		.button
 		{
-			letter-spacing: 2px;
-			display: block;
-			padding: 1em 0 1em 0;
-		}
-
-	/* List */
-
-		ul.links
-		{
-		}
-
-			ul.links li
-			{
-				display: block;
-				border: 0;
-				padding: 0.25em 0 0 0;
-				margin: 0;
-			}
-
-		ul.divided
-		{
-		}
-
-			ul.divided li
-			{
-				margin: 2.75em 0 0 0;
-				padding: 2.75em 0 0 0;
-			}
-
-		ul.icons
-		{
-			padding: 0 !important;
-			margin: 0 0 0.5em 0 !important;
+			padding: 0.75em 0 0.75em 0;
+			width: 100%;
+			max-width: 320px;
 		}
 
 	/* Box */
 
 		.box
 		{
+			margin-top: 4.5em;
 		}
-		
-			.box.excerpt
+
+			.box:after
 			{
+				top: -4.5em;
+				height: 4.5em;
+			}
+		
+			.box:before
+			{
+				width: 45px;
+				height: 33px;
+				top: -2.25em;
+				margin-left: -22.5px;
+				margin-top: -16.5px;
+				background-size: 45px 33px;
+			}
+
+			.box.style1
+			{
+				padding: 0;
+				text-align: center;
 			}
 			
-				.box-excerpt .date
+				.box.style1 .image
 				{
-					display: block;
-					letter-spacing: 2px;
-					padding: 0.25em 1em 0.25em 1em;
-					margin: 0 auto 2.5em auto;
-					text-align: center;
+					position: relative !important;
+					left: 0 !important;
+					width: 100% !important;
+					height: auto !important;
 				}
 
-/*********************************************************************************/
-/* UI                                                                            */
-/*********************************************************************************/
+					.box.style1 .image img
+					{
+						position: relative;
+						height: auto;
+						width: 100%;
+					}
 
-	#titleBar
-	{
-	}
+				.box.style1 .inner
+				{
+					margin: 0 !important;
+					padding: 2em 1.25em 2em 1.25em !important;
+				}
 
-		#titleBar .toggle
-		{
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 80px;
-			height: 60px;
-		}
-
-			#titleBar .toggle:before
+			.box.style2
 			{
-				display: inline-block;
-				font-family: FontAwesome;
-				text-decoration: none;
-				font-style: normal;
-				font-weight: normal;
-				-webkit-font-smoothing:antialiased;
-				-moz-osx-font-smoothing:grayscale;
-				
-				content: '\f0c9';
-				display: block;
-				width: 60px;
-				height: 40px;
-				background: rgba(232,232,232,0.9);
-				border-radius: 4px;
-				position: absolute;
-				left: 5px;
-				top: 5px;
-				box-shadow: 0.125em 0.125em 0 0 rgba(0,0,0,0.15);
-				text-align: center;
-				line-height: 40px;
-				font-size: 18px;
-				color: #aaa;
-			}
-
-			#titleBar .toggle:active:before
-			{
-				opacity: 0.5;
-			}
-
-	#navPanel
-	{
-		background: #444;
-		border-right: solid 2px #3c3c3c;
-		font-weight: 400;
-		text-transform: uppercase;
-		color: #888;
-		letter-spacing: 2px;
-		font-size: 0.85em;
-	}
-
-		#navPanel .link
-		{
-			display: block;
-			color: #ddd;
-			text-decoration: none;
-			height: 44px;
-			line-height: 44px;
-			border: 0;
-			border-top: solid 1px #3c3c3c;
-			padding: 0 1em 0 1em;
-		}
-		
-			#navPanel .link:first-child
-			{
-				border-top: 0;
 			}
 			
-			#navPanel .link.depth-0
+				.box.style2 .inner
+				{
+				}
+
+					.box.style2 .inner .row
+					{
+					}
+					
+						.box.style2 .inner .row:before
+						{
+							display: none;
+						}
+
+					.box.style2 .inner .image
+					{
+						padding: 0;
+						max-width: 250px;
+						margin: 0 auto 20px auto;
+					}
+
+			.box.style3
 			{
-				font-weight: 600;
-				color: #fff;
+				padding: 2em 1.25em 2em 1.25em;
 			}
-
-			#navPanel .indent-1 { display: inline-block; width: 1em; }
-			#navPanel .indent-2 { display: inline-block; width: 2em; }
-			#navPanel .indent-3 { display: inline-block; width: 3em; }
-			#navPanel .indent-4 { display: inline-block; width: 4em; }
-			#navPanel .indent-5 { display: inline-block; width: 5em; }
-			#navPanel .depth-0 { color: #fff; }
-
-/*********************************************************************************/
-/* Wrappers                                                                      */
-/*********************************************************************************/
-
-	#header-wrapper
-	{
-		padding: 0 20px 0 20px;
-	}
-
-	#features-wrapper
-	{
-		padding: 3em 20px 3em 20px;
-	}
-	
-	#banner-wrapper
-	{
-		padding: 2em 0 2em 0;
-	}
-	
-	#main-wrapper
-	{
-		padding: 3em 20px 3em 20px;
-	}
-	
-	#footer-wrapper
-	{
-		padding: 4em 20px 3em 20px;
-	}
 
 /*********************************************************************************/
 /* Header                                                                        */
@@ -254,125 +203,105 @@
 
 	#header
 	{
-		padding: 6em 0 4em 0;
+		padding: 6em 0 6em 0;
 	}
-	
-		#header h1
+
+		#header header
 		{
-			font-size: 2em;
-			letter-spacing: 8px;
-			line-height: 1.25em;
+			padding-left: 2em;
+			padding-right: 2em;
 		}
 		
-		#header p
+			#header header h1
+			{
+				font-size: 1.75em;
+				letter-spacing: 6px;
+			}
+
+		#header footer
 		{
-			margin: 1.25em 0 0 0;
-			letter-spacing: 2px;
+			bottom: 4.5em;
+			padding: 0 2em 0 2em;
 		}
 
-/*********************************************************************************/
-/* Nav                                                                           */
-/*********************************************************************************/
-
-	#nav
-	{
-		display: none;
-	}
+			#header footer:after
+			{
+				bottom: -4.5em;
+				left: 50%;
+				height: 4.5em;
+			}
+		
+			#header footer:before
+			{
+				width: 45px;
+				height: 33px;
+				bottom: -2.25em;
+				margin-left: -22.5px;
+				margin-bottom: -16.5px;
+				background-size: 45px 33px;
+			}
 
 /*********************************************************************************/
 /* Banner                                                                        */
 /*********************************************************************************/
-	
+
 	#banner
 	{
-		padding: 5em 20px 5em 20px;
-		margin: 0 !important;
-	}	
+		padding: 3em 2em 3em 2em;
+		background-size: auto 150%;
+	}
 
-		#banner p
+		#banner header
 		{
-			font-size: 1.75em;
-			line-height: 1.25em;
-			letter-spacing: 3px;
+			margin: 0 0 1em 0;
 		}
 		
-			#banner p br
+			#banner header h2
 			{
-				display: none;
+				font-size: 1.5em;
+				letter-spacing: 6px;
 			}
-	
-/*********************************************************************************/
-/* Content                                                                       */
-/*********************************************************************************/
-	
-	#content
-	{
-	}
-
-		#content > section,
-		#content > article
-		{
-			margin: 4em 0 0 0 !important;
-			padding: 4em 0 0 0 !important;
-		}
-		
-		#content > section:first-child,
-		#content > article:first-child
-		{
-			margin: 0 !important;
-			padding: 0 !important;
-		}
-	
-/*********************************************************************************/
-/* Sidebar                                                                       */
-/*********************************************************************************/
-	
-	#sidebar
-	{
-		border-top: solid 2px #e5e5e5;
-		box-shadow: inset 0px 8px 0px 0px #fff, inset 0px 10px 0px 0px #e5e5e5;
-		margin-top: 4em !important;
-		padding-top: 4em !important;
-	}
-
-		#sidebar > section,
-		#sidebar > article
-		{
-			margin: 4em 0 0 0 !important;
-			padding: 4em 0 0 0 !important;
-		}
-		
-		#sidebar > section:first-child,
-		#sidebar > article:first-child
-		{
-			margin: 0 !important;
-			padding: 0 !important;
-		}
 
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
-
+	
 	#footer
 	{
 	}
-	
+
 		#footer .icons
 		{
-			margin: 0 0 2em 0 !important;
+			padding: 0.5em 1.25em 0.5em 1.25em;
 		}
 		
-		#footer .icons:last-child
+		#footer .copyright
 		{
-			margin-bottom: 0;
+			font-size: 1em;
+			margin: 0 0 4em 0;
 		}
 
 /*********************************************************************************/
-/* Copyright                                                                     */
+/* Poptrox                                                                       */
 /*********************************************************************************/
 
-	#copyright
+	.poptrox-popup
 	{
-		margin-top: 2em;
-		padding-top: 2em;
 	}
+	
+		.poptrox-popup .nav-next,
+		.poptrox-popup .nav-previous
+		{
+			opacity: 1.0;
+		}
+
+			.poptrox-popup .nav-next:before,
+			.poptrox-popup .nav-previous:before
+			{
+				display: none;
+			}
+		
+		.poptrox-popup .closer
+		{
+			opacity: 0.5;
+		}
